# Rustris

./: Cargo.toml
assets/: blocks.psd
include/: convert_from_tetralegends.bat  ogg.dummy
src/: main.rs  resources.rs
src/extension/: default.frag  default.vert  mod.rs
src/game/: bag.rs  board.rs  config.rs  event_type.rs  game.rs  input.rs  level_data.rs  mod.rs  mode.rs  piece.rs  piece_type.rs  row.rs  session.rs  tspin_type.rs
src/game/mode/: marathon.rs  mod.rs  zen.rs
src/game/player/: mod.rs  user.rs
src/game/randomizer/: double_bag.rs  grand_master_3.rs  mod.rs  plain.rs  single_bag.rs
src/game/rotation/: common.rs  mod.rs  srs.rs  srs_plus.rs
src/rustris/: background.rs  board.rs  functions.rs  ingame.rs  menu.rs  mod.rs  object.rs  place_effect.rs  point_message.rs  raylib_extension.rs  raylib_extensions.rs  resources.rs  rustris.rs
src/rustris/core/: bag.rs  block_type.rs  board.rs  config.rs  input_type.rs  mod.rs  piece.rs  piece_type.rs  row.rs
src/rustris/scenes/: ingame.rs  menu.rs  mod.rs
src/utility/: mod.rs
