[package]
name = "Rustris"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
macroquad = { version = "0.4.4", features = ["audio"] }
rand = "0.8.5"
simple-easing = "1.0.1"
lazy_static = "1.4.0"
enum_dispatch = "0.3.8"
once_cell = "1.19.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
futures = "0.3.30"
